[package]
name = "melange_db"
version = "0.1.5"
edition = "2024"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "基于 sled 架构深度优化的下一代高性能嵌入式数据库，支持 ARM64 NEON SIMD 优化、多级缓存和布隆过滤器"
license = "LGPL-3.0"
repository = "https://github.com/0ldm0s/melange_db"
homepage = "https://github.com/0ldm0s/melange_db"
documentation = "https://docs.rs/melange_db"
readme = "README.md"
keywords = ["database", "embedded-database", "key-value-store", "performance", "optimization"]
categories = ["database-implementations", "concurrency", "data-structures", "development-tools::profiling", "embedded"]

[features]
# 初始化已分配的内存为0xa1，在释放前将0xde写入已释放的内存
testing-shred-allocator = []
# 使用计数全局分配器，提供melange_db::alloc::{allocated, freed, resident, reset}函数
testing-count-allocator = []
for-internal-testing-only = []
# 禁止重用对象ID和堆槽，禁用树叶子合并，禁用堆文件截断
monotonic-behavior = []

# 压缩算法特性选择（互斥特性，只能选择一个）
# 启用zstd压缩，提供高压缩率
compression-zstd = []
# 启用lz4压缩，提供更快的压缩速度，适合中等性能设备
compression-lz4 = []
# 禁用压缩，提供最佳性能，适合低端设备（如树莓派）
compression-none = []

# 特性组合验证（防止同时启用多个压缩特性）
# 如果同时启用多个特性，将使用以下优先级：none > lz4 > zstd

# mimalloc内存分配器支持
mimalloc = ["dep:mimalloc"]

# 默认特性集合 - 不启用压缩以提供最佳性能
default = []

[profile.release]
debug = true
opt-level = 3
overflow-checks = true
panic = "abort"

[profile.test]
debug = true
overflow-checks = true
# panic = "abort"  # 测试模式下不支持abort，使用默认的unwind

[dependencies]
bincode = "1.3.3"
mimalloc = { version = "0.1", optional = true }
cache-advisor = "1.0.16"
concurrent-map = { version = "5.0.31", features = ["serde"] }
crc32fast = "1.3.2"
ebr = "0.2.13"  # 暂时保留，逐步迁移
crossbeam-epoch = "0.9.18"
crossbeam-skiplist = "0.1.3"
inline-array = { version = "0.1.13", features = ["serde", "concurrent_map_minimum"] }
fs2 = "0.4.3"
rat_logger = "0.2.8"
pagetable = "0.4.5"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-map = { version = "1.0.5", features = ["serde"] }
zstd = "0.12.4"
lz4_flex = "0.11"
fnv = "1.0.7"
fault-injection = "1.0.10"
crossbeam-queue = "0.3.8"
crossbeam-channel = "0.5.8"
tempdir = "0.3.7"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
env_logger = "0.10.0"
num-format = "0.4.4"
rand = "0.9"
quickcheck = "1.0.3"
rand_distr = "0.5"
libc = "0.2.147"
criterion = "0.5"

[[bench]]
name = "basic_benchmark"
harness = false
